--- a/py-eh-consumer/requirements.txt
+++ b/py-eh-consumer/requirements.txt
@@ -2,6 +2,9 @@
 # The Python Worker is managed by Azure Functions platform
 # Manually managing azure-functions-worker may cause unexpected issues
 
+aiohttp
+azure-cosmos
 azure-monitor-opentelemetry
 azure-functions
 pydantic
+retry
